[gd_scene load_steps=17 format=2]

[ext_resource path="res://MGF Scene/Main Game/GuideMode.gd" type="Script" id=1]
[ext_resource path="res://Assets2D/Fonts/UIMatchDetails.tres" type="FontFile" id=2]
[ext_resource path="res://Assets2D/Theme/btnUIN.tres" type="StyleBox" id=3]
[ext_resource path="res://MGF Scene/Main Game/check.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/ACVoice/ACVoicebox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets2D/Fonts/UI.tres" type="FontFile" id=6]
[ext_resource path="res://Assets2D/Theme/btnRedCP.tres" type="StyleBox" id=7]
[ext_resource path="res://Assets2D/UI/IconMoveRight.png" type="Texture2D" id=8]
[ext_resource path="res://Assets2D/Theme/btnRedCN.tres" type="StyleBox" id=9]
[ext_resource path="res://Assets2D/UI/IconInfo.png" type="Texture2D" id=10]
[ext_resource path="res://Assets2D/UI/iconApply.png" type="Texture2D" id=11]
[ext_resource path="res://Assets2D/UI/iconExit.png" type="Texture2D" id=12]
[ext_resource path="res://Assets2D/Theme/btnUIBGN.tres" type="StyleBox" id=13]

[sub_resource type="ImageTexture" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 1000
corner_radius_top_right = 1000
corner_radius_bottom_right = 1000
corner_radius_bottom_left = 1000

[node name="GuideMode" type="Popup"]
process_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="Main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="BtnInfo" type="Button" parent="Main"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -108.0
offset_right = -32.0
offset_bottom = -28.0
theme_override_fonts/font = ExtResource( 6 )
theme_override_styles/hover = ExtResource( 7 )
theme_override_styles/pressed = ExtResource( 7 )
theme_override_styles/focus = ExtResource( 7 )
theme_override_styles/disabled = ExtResource( 9 )
theme_override_styles/normal = ExtResource( 9 )
icon = ExtResource( 10 )
icon_alignment = 1
expand_icon = true

[node name="Panel" type="MarginContainer" parent="Main/BtnInfo"]
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -32.0
offset_right = -48.0
offset_bottom = 32.0
pivot_offset = Vector2( 64, 0 )
mouse_filter = 2
theme_override_constants/margin_left = -500
__meta__ = {
"_edit_group_": true
}

[node name="Check" type="HBoxContainer" parent="Main/BtnInfo/Panel"]
offset_left = -500.0
offset_right = 64.0
offset_bottom = 64.0
custom_minimum_size = Vector2( 64, 64 )
pivot_offset = Vector2( 64, 0 )
mouse_filter = 2
alignment = 2

[node name="check" parent="Main/BtnInfo/Panel/Check" instance=ExtResource( 4 )]
offset_left = 500.0
offset_top = 0.0
offset_right = 564.0
offset_bottom = 64.0

[node name="Info" type="Label" parent="Main/BtnInfo"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -312.0
offset_top = -48.0
offset_right = -86.0
offset_bottom = -11.0
theme_override_fonts/font = ExtResource( 6 )
theme_override_styles/normal = ExtResource( 3 )
text = "Shoot (1 time) "
align = 1
valign = 1

[node name="BtnAdd" type="Button" parent="Main"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -204.0
offset_right = -32.0
offset_bottom = -124.0
theme_override_fonts/font = ExtResource( 6 )
theme_override_styles/hover = ExtResource( 7 )
theme_override_styles/pressed = ExtResource( 7 )
theme_override_styles/focus = ExtResource( 7 )
theme_override_styles/disabled = ExtResource( 9 )
theme_override_styles/normal = ExtResource( 9 )
icon = ExtResource( 11 )
icon_alignment = 1
expand_icon = true

[node name="BtnNextGuide" type="Button" parent="Main"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -108.0
offset_right = 112.0
offset_bottom = -28.0
theme_override_fonts/font = ExtResource( 6 )
theme_override_styles/hover = ExtResource( 7 )
theme_override_styles/pressed = ExtResource( 7 )
theme_override_styles/focus = ExtResource( 7 )
theme_override_styles/disabled = ExtResource( 9 )
theme_override_styles/normal = ExtResource( 9 )
icon = ExtResource( 11 )
icon_alignment = 1
expand_icon = true

[node name="Demo" type="Popup" parent="."]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="Demo"]
anchor_right = 1.0
anchor_bottom = 1.0
volume_db = -80.0

[node name="Timer" type="Timer" parent="Demo/VideoStreamPlayer"]
wait_time = 0.05
autostart = true

[node name="Info" type="Panel" parent="Demo"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -188.0
theme_override_styles/panel = ExtResource( 13 )

[node name="Label" type="Label" parent="Demo/Info"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 448.0
offset_right = -448.0
theme_override_fonts/font = ExtResource( 2 )
align = 1
valign = 1
autowrap = true

[node name="BtnSkip" type="Button" parent="Demo/Info"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -46.0
offset_right = -64.0
offset_bottom = 76.0
theme_override_fonts/font = ExtResource( 6 )
theme_override_styles/hover = ExtResource( 7 )
theme_override_styles/pressed = ExtResource( 7 )
theme_override_styles/focus = ExtResource( 7 )
theme_override_styles/disabled = ExtResource( 9 )
theme_override_styles/normal = ExtResource( 9 )
icon = ExtResource( 8 )
icon_alignment = 1
expand_icon = true

[node name="BtnQuit" type="Button" parent="Demo/Info"]
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = -46.0
offset_right = 192.0
offset_bottom = 76.0
theme_override_fonts/font = ExtResource( 6 )
theme_override_styles/hover = ExtResource( 7 )
theme_override_styles/pressed = ExtResource( 7 )
theme_override_styles/focus = ExtResource( 7 )
theme_override_styles/disabled = ExtResource( 9 )
theme_override_styles/normal = ExtResource( 9 )
icon = ExtResource( 12 )
icon_alignment = 1
expand_icon = true

[node name="BtnVideoSlider" type="HSlider" parent="Demo/Info"]
anchor_right = 1.0
offset_left = 64.0
offset_top = -8.0
offset_right = -64.0
offset_bottom = 12.0
theme_override_icons/tick = SubResource( 1 )
theme_override_icons/grabber_disabled = SubResource( 1 )
theme_override_icons/grabber_highlight = SubResource( 1 )
theme_override_icons/grabber = SubResource( 1 )
theme_override_styles/slider = SubResource( 2 )
theme_override_styles/grabber_area_highlight = SubResource( 3 )
theme_override_styles/grabber_area = SubResource( 3 )
step = 0.05
value = 50.0
editable = false
scrollable = false

[node name="ACVoicebox" parent="." instance=ExtResource( 5 )]
volume_db = -80.0

[connection signal="pressed" from="Main/BtnInfo" to="." method="_on_BtnInfo_pressed"]
[connection signal="pressed" from="Main/BtnAdd" to="." method="_on_BtnAdd_pressed"]
[connection signal="pressed" from="Main/BtnNextGuide" to="." method="_on_BtnNextGuide_pressed"]
[connection signal="finished" from="Demo/VideoStreamPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="timeout" from="Demo/VideoStreamPlayer/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Demo/Info/BtnSkip" to="." method="_on_BtnSkip_pressed"]
[connection signal="pressed" from="Demo/Info/BtnQuit" to="." method="_on_BtnQuit_pressed"]
[connection signal="drag_started" from="Demo/Info/BtnVideoSlider" to="." method="_on_BtnVideoSlider_drag_started"]

[editable path="Main/BtnInfo/Panel/Check/check"]
